--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tinymce/tinymce-react": "^6.2.1",
     "appwrite": "^18.1.1",
     "html-react-parser": "^5.2.5",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
