--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@tinymce/tinymce-react": "^6.2.1",
     "appwrite": "^18.1.1",
+    "framer-motion": "^12.23.0",
     "html-react-parser": "^5.2.5",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
